--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "themes/hugo-PaperMod"]
-	path = themes/hugo-PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/KamiMod"]
+	path = themes/KamiMod
+	url = https://github.com/8hobbies/KamiMod.git
+	branch = master
