--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-baseURL: "https://adityatelange.github.io/hugo-PaperMod/"
-title: PaperMod
-copyright: "© [PaperMod Contributors](https://github.com/adityatelange/hugo-PaperMod/graphs/contributors)"
+baseURL: "https://kamimod.8hob.io"
+title: KamiMod
+copyright: "© [KamiMod Contributors](https://github.com/8hobbies/KamiMod/graphs/contributors)"
 paginate: 5
-theme: [hugo-PaperMod]
+theme: [KamiMod]
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
@@ -13,7 +13,7 @@ buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-mainsections: ["posts", "papermod"]
+mainsections: ["posts", "kamimod"]
 
 minify:
   disableXML: true
