--- a/config.yml
+++ b/config.yml
@@ -110,7 +110,7 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
+  description: "Theme KamiMod - https://github.com/8hobbies/KamiMod"
   author: Theme PaperMod
   # author: ["Me", "You"] # multiple authors
 
@@ -133,7 +133,7 @@ params:
 
   profileMode:
     enabled: false
-    title: PaperMod
+    title: KamiMod
     imageUrl: "#"
     imageTitle: my image
     # imageWidth: 120
@@ -145,9 +145,9 @@ params:
         url: tags
 
   homeInfoParams:
-    Title: "PaperMod's Demo"
+    Title: "KamiMod's Demo"
     Content: >
-      👋 Welcome to demo page of Hugo's theme PaperMod!
+      👋 Welcome to demo page of Hugo's theme KamiMod, an incremental fork of PaperMod!
 
       - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
 
@@ -158,19 +158,13 @@ params:
   socialIcons:
     - name: github
       title: View Source on Github
-      url: "https://github.com/adityatelange/hugo-PaperMod"
-    - name: Discord
-      title: Join discord community
-      url: "https://discord.gg/ahpmTvhVmp"
-    - name: X
-      title: Share PaperMod on X/Twitter
-      url: "https://x.com/intent/tweet/?text=Checkout%20Hugo%20PaperMod%20%E2%9C%A8%0AA%20fast,%20clean,%20responsive%20Hugo%20theme.&url=https://github.com/adityatelange/hugo-PaperMod&hashtags=Hugo,PaperMod"
-    - name: KoFi
-      title: Buy me a Ko-Fi :)
-      url: "https://ko-fi.com/adityatelange"
+      url: "https://github.com/8hobbies/KamiMod"
+    - name: gitlab
+      title: View Source on GitLab
+      url: "https://gitlab.com/8hobbies/KamiMod"
 
   editPost:
-    URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
+    URL: "https://github.com/8hobbies/KamiMod-example-site/tree/exampleSite/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
