--- a/config.yml
+++ b/config.yml
@@ -147,13 +147,15 @@ params:
   homeInfoParams:
     Title: "KamiMod's Demo"
     Content: >
-      👋 Welcome to demo page of Hugo's theme KamiMod, an incremental fork of PaperMod!
+      👋 Welcome to demo page of Hugo's theme [KamiMod](https://github.com/8hobbies/KamiMod), an incremental fork of [PaperMod](https://github.com/adityatelange/hugo-PaperMod)!
 
       - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
 
       - Feel free to show your support by giving us a star 🌟 on GitHub and sharing with your friends and social media .
 
       - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper/tree/4330c8b12aa48bfdecbcad6ad66145f679a430b3).
+
+      - Source code of this demo is available on [GitHub](https://github.com/8hobbies/KamiMod-example-site).
 
   socialIcons:
     - name: github
