--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,4 +20,7 @@ jobs:
         run: ./update-post.sh
 
       - name: Check file changes
-        run: git diff || ( echo "::error::content/posts/kamimod/readme.md is out of sync. Please run ./update-post.sh" && exit 1 )
+        run: |
+          if [ $(git status --porcelain | grep readme) ]; then
+            echo "::error::content/posts/kamimod/readme.md is out of sync. Please run ./update-post.sh" && exit 1
+          fi
