Add "social: true" to dodge Hugo deprecation error
https://github.com/adityatelange/hugo-PaperMod/issues/1573#issuecomment-2415235233

--- a/config.yml
+++ b/config.yml
@@ -157,6 +157,7 @@ params:
 
       - Source code of this demo is available on [GitHub](https://github.com/8hobbies/KamiMod-example-site).
 
+  social: true
   socialIcons:
     - name: github
       title: View Source on Github
